Replaced WebSecurityConfigurerAdapter with SecurityFilterChain beans
- Upgraded to java 17 and updated some classes to use the new language
features.
- Moved the LoginForm in RestAuthenticationFilter to a seperate package.
- In LoginForm added the getFormFromRequest() to map the request body
to a json string and a LoginForm object
- In RestAuthenticationFilter replaced the read() method with the
IOUtils.toString() method from commons-io and is now used in the
LoginForm by the getFormFromRequest() method.
- In LogUtil.logAuthenticationFailure() added the request so that the
username can be retrieved from the request for better logging.
- Updated the WebSecurityAutoConfig to the new SecurityFilterChain way.
- Removed the WebSecurityCustomizer from rest-secure in favour of the
one in spring boot.